[lworld] C2 compilation fails with assert "correct memory chain"

XMLWordPrintable

      # Internal Error (open/src/hotspot/share/opto/memnode.cpp:224), pid=23351, tid=23364
      # assert(phase->C->get_alias_index(t) == phase->C->get_alias_index(t_adr)) failed: correct memory chain


          @Test()
          public static void test109() {
              MyValue1[] src = new MyValue1[1];
              MyValue1?[] dst = new MyValue1?[1];
              src[0] = testValue1;
              System.arraycopy(src, 0, dst, 0, 1);
              Asserts.assertEquals(src[0], dst[0]);
          }

          @DontCompile
          public void test109_verifier(boolean warmup) {
              test109();
          }

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: