8242453: [lworld] C2 compilation fails with assert 'correct memory chain'